--- a/index.Rmd
+++ b/index.Rmd
@@ -1,7 +1,7 @@
 --- 
-title: "R tips: 16 HOWTO's with examples for data analysts"
+title: "R tips: 17 HOWTO's with examples for data analysts"
 author: "Lingyun Zhang"
-date: "2017-11-18"
+date: "2019-03-23"
 site: bookdown::bookdown_site
 output: bookdown::gitbook
 documentclass: book
@@ -634,6 +634,88 @@ For more details, please watch Winston Chang's webinar
 https://www.rstudio.com/resources/webinars/profvis-profiling-tools-for-faster-r-code/
 and his another talk
 https://www.rstudio.com/resources/videos/profiling-and-performance/
+
+
+# How to create a package
+
+## What is an R package?
+
+An R package is a folder that contains required files and sub-folders. In RStudio, it is easy to create an R package.
+
+## Two handy tools
+
+- `devtools`
+- `roxygen2`
+
+## The procedure
+
+- **Step 1:** Create the "structure", which is an empty folder containing required although empty sub-folders and files, in RStudio. **file>new project...>package**
+
+- **Step 2:** Write R files and save them in the R folder. An example:
+```{r, eval=FALSE}
+#' find key information about a dataframe
+#'
+#' This function allows you to find key information about a dataframe
+#' @param a_df a dataframe
+#' @keywords key info; dataframe
+#' @export
+#' @author Lingyun (Larry) Zhang \email{lyzhang10@gmail.com}
+#' @examples
+#' temp_df <-
+#'      data.frame(a = 1:10,
+#'                 b = NA,
+#'                 e = c(letters[1:8], NA, NA))
+#' x <- find_df_key_info(temp_df)
+
+#' @importFrom magrittr %>%
+
+find_df_key_info <- function(a_df)
+{re_df <-
+  data.frame(vari_names = names(a_df)) %>%
+  dplyr::mutate(type = purrr::map_chr(a_df, typeof),
+                no_of_unique_rows = purrr::map_int(a_df, function(x) length(unique(x))),
+                no_of_rows = dim(a_df)[1],
+                no_of_NAs = purrr::map_int(a_df, function(x) sum(is.na(x))))
+ return(re_df)
+}
+```
+
+- **Step 3:** Run the following R code
+```{r, eval=FALSE}
+library(devtools)
+library(roxygen2)
+document()
+```
+
+- **Step 4:** Work on `DESCRIPTION` file. An example:
+
+````
+Package: dfexplorer
+Type: Package
+Title: 'dfexplorer' for explore new dataframe
+Version: 0.1.0
+Author: Lingyun (Larry) Zhang
+Maintainer: Lingyun (Larry) Zhang <lyzhang10@gmail.com>
+Description: This package contains functions for explore "new" data in a dataframe
+Imports:
+    dplyr, 
+    magrittr,
+    purrr
+License: GPL-3
+Encoding: UTF-8
+LazyData: true
+RoxygenNote: 6.1.1
+````
+
+- **Step 5:** Build the package by clicking on the `Build` button and ...
+
+- **Step 6:** Version control---link to a repo in Github
+    - initialize the project. Tools>Version Control>...
+    - stage and commit
+    - create a repo under your Github account
+    - set up connection by clicking  `Git` button; then clicking on the “two purple boxes and a white square” in the Git pane .... (Reference: section 17.5.3 on https://happygitwithr.com/existing-github-last.html)
+    - commit and push
+
 
 # How to put *n* things in *m* boxes
 
