--- a/index.Rmd
+++ b/index.Rmd
@@ -3,7 +3,10 @@ title: "R tips: 17 HOWTO's with examples for data analysts"
 author: "Lingyun Zhang"
 date: "2019-03-23"
 site: bookdown::bookdown_site
-output: bookdown::gitbook
+output: 
+  bookdown::gitbook:
+    includes: 
+      in_header: [GA_Script.html]
 documentclass: book
 link-citations: yes
 links-as-notes: true
